--- a/portfolio.html
+++ b/portfolio.html
@@ -161,26 +161,26 @@
             <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                 <div class="our-project">
                     <div class="img">
-                        <a class="test-popup-link" href="#">
-                            <img src="#" alt="portfolio-7" class="img-fluid">
+                        <a class="test-popup-link" href="https://www.youtube.com/watch?v=enJIZqvrmbc">
+                            <img src="./img/PHP-MOTORS.PNG" alt="portfolio-7" class="img-fluid">
                         </a>
                     </div>
                     <div class="title py-4">
-                        <h4 class="text-uppercase">Project 7</h4>
-                        <span class="text-secondary">Upcoming, Portfolio</span>
+                        <h4 class="text-uppercase">PHP Motors Project </h4>
+                        <span class="text-secondary">Back-End, PHP</span>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
                 <div class="our-project">
                     <div class="img">
-                        <a class="test-popup-link" href="#">
-                            <img src="#" alt="portfolio-8" class="img-fluid">
+                        <a class="test-popup-link" href="https://youtu.be/o_oCVmSbNqU">
+                            <img src="./img/DashboardPage.PNG" alt="portfolio-8" class="img-fluid">
                         </a>
                     </div>
                     <div class="title py-4">
-                        <h4 class="text-uppercase">Project 8</h4>
-                        <span class="text-secondary">Upcoming, Portfolio</span>
+                        <h4 class="text-uppercase">POWER BI Project </h4>
+                        <span class="text-secondary">Business Intel and Analytics, Portfolio</span>
                     </div>
                 </div>
             </div>
